loki/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: comms-svc-int
    cert-manager.io/common-name: loki.breeze-blocks.net
    cert-manager.io/usages: key agreement,digital signature, server auth
    meta.helm.sh/release-name: loki
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/component: http-routing
    app.kubernetes.io/name: loki
  name: loki
  namespace: monitoring
spec:
  gatewayClassName: eg
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: loki.breeze-blocks.net
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: loki.breeze-blocks.net
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: loki-tls
        mode: Terminate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    meta.helm.sh/release-name: loki
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/managed-by: Helm
  name: loki
  namespace: monitoring
spec:
  hostnames:
    - loki.breeze-blocks.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: loki
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: loki
          port: 3100
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    meta.helm.sh/release-name: loki
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/managed-by: Helm
  name: loki-tls-redirect
  namespace: monitoring
spec:
  hostnames:
    - loki.breeze-blocks.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: loki
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
